force-app/main/default/objects/TwinFieldMapConfig__c/TwinFieldMapConfig__c.object-meta.xml
<CustomObject>
    <label>Twin Field Map Config</label>
    <pluralLabel>Twin Field Map Configs</pluralLabel>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>