force-app/main/default/objects/TwinFieldMapConfig__c/fields/OverwriteRule__c.field-meta.xml
<CustomField>
    <fullName>OverwriteRule__c</fullName>
    <label>Overwrite Rule</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>OnlyIfTargetBlank</fullName>
                <label>Only if target blank</label>
            </value>
            <value>
                <fullName>OnlyIfSourceNotNull</fullName>
                <label>Only if source not null</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>