force-app/main/default/objects/TwinFieldMapConfig__c/fields/SourceField__c.field-meta.xml
<CustomField>
    <fullName>SourceField__c</fullName>
    <label>Source Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>