force-app/main/default/objects/TwinFieldMapConfig__c/fields/SourceObject__c.field-meta.xml
<CustomField>
    <fullName>SourceObject__c</fullName>
    <label>Source Object</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>