force-app/main/default/objects/TwinFieldMapConfig__c/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <label>Target Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>