force-app/main/default/objects/TwinFieldMapConfig__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>Target Object</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>