force-app/main/default/objects/TwinFieldMapConfig__c/fields/Transform__c.field-meta.xml
<CustomField>
    <fullName>Transform__c</fullName>
    <label>Transform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Round0</fullName>
                <label>Round (0 decimals)</label>
            </value>
            <value>
                <fullName>Round2</fullName>
                <label>Round (2 decimals)</label>
            </value>
            <value>
                <fullName>DefaultZero</fullName>
                <label>Default to 0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>